--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
   },
   "homepage": "https://github.com/bhaskar-nair2/vue-access-x#readme",
   "dependencies": {
-    "eslint": "^7.26.0",
     "shvl": "^2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.26.0"
+  },
   "peerDependencies": {
     "vue": "2.x",
     "vuex": "3.x"
