--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "vue-access-x",
   "version": "0.1.1",
   "description": "An access control plugin for vuejs (2.x) applications",
-  "main": "src/index.js",
+  "main": "dist/access.js",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
@@ -38,7 +36,9 @@
   "devDependencies": {
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.1"
+    "eslint-plugin-import": "^2.23.1",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   },
   "peerDependencies": {
     "vue": "2.x",
